# slipcover

./: .bazelignore  .bazelrc  .gitignore  AGENTS.md  BAZEL_BUILD.md  BUILD.bazel  Cargo.toml  MODULE.bazel  PROJECT_ANALYSIS.md  WORKSPACE  mise.toml  pyproject.toml  requirements.txt  run_test.sh  setup.py  test_debug.py  tox.ini
.claude/: settings.local.json
.claude/scripts/: session_start.sh
.github/workflows/: build-and-upload.yml  lint.yml  tests.yml
benchmarks/: benchmarks.json
src/covers/: __init__.py  __main__.py  branch.py  bytecode.py  covers.py  importer.py  runner.py  xmlreport.py
src/slipcover/: __init__.py  __main__.py  branch.py  bytecode.py  importer.py  slipcover.py  xmlreport.py
src_rust/: branch.rs  branch_analysis.rs  bytecode.rs  cli.rs  code_analysis.rs  covers.rs  file_matcher.rs  lcovreport.rs  lib.rs  path.rs  reporting.rs  schemas.rs  tracker.rs  xmlreport.rs
tests/: class_test.py  test_branch.py  test_coverage.py  test_importer.py
tools/: BUILD.bazel  disfile.py  run_tests.sh
