[package]
name = "covers"
version = "0.0.1"
edition = "2024"
rust-version = "1.91.0"

[lib]
name = "covers_core"
crate-type = ["cdylib"]
path = "src_rust/lib.rs"

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py312"] }
ahash = "0.8"
tabled = "0.20.0"
chrono = "0.4"
dunce = "1.0.4"
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.3" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.3" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.3" }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
