[project]
name = "covers"
description = "Near Zero-Overhead Python Code Coverage"
keywords = ['coverage', 'testing']
version = "0.0.1"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 10"
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "tabulate"
]

[project.scripts]
covers = "covers.__main__:main"

[project.urls]
"Homepage" = "https://github.com/amartani/covers"
"Repository" = "https://github.com/amartani/covers"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
module-name = "covers.covers_core"

[project.optional-dependencies]
test = [
    'pytest',
    'pytest-forked',
    'pytest-cov'
]

[tool.ruff]
exclude = ["benchmarks", "tools", "tests/testme*.py", "tests/imported/bad.py"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

