[project]
name = "covers"
description = "Near Zero-Overhead Python Code Coverage"
keywords = ['coverage', 'testing']
dynamic = ["version"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 10"
]
requires-python = ">=3.12,<3.15"

[project.scripts]
covers = "covers.__main__:main"

[project.urls]
"Homepage" = "https://github.com/amartani/covers"
"Repository" = "https://github.com/amartani/covers"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
package = true

[tool.maturin]
python-source = "src"
module-name = "covers.covers_core"

[dependency-groups]
test = [
    'pytest',
    'pytest-forked',
    'maturin',
    'pip',
]
benchmark = [
    {include-group = 'test'},
    "py-cpuinfo>=9.0.0",
    "scikit-learn>=1.7.2",
    'tabulate',
]

[tool.ruff]
exclude = ["benchmarks", "tools", "tests/testme*.py", "tests/imported/bad.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

